--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,5 +1,5 @@
 .header {
-    background-image: url('../../public/header_bg.jpg');
+    background-image: url('../public/header_bg.jpg');
     height: 250px;
     box-shadow: inset 0 5000px 0 rgb(0 0 0 / 50%);
     background-position: 50%;
